ticket entity implemented and removed old custome mappers, switched to mapstruct. moved application.yml properties to docker-compose.yml